
PROJECT(main)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
SET (CMAKE_BUILD_TYPE Release)
SET (CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -fPIC  -Wall -fno-stack-protector" )
AUX_SOURCE_DIRECTORY(. DIR_SRCS)

SET (EXTRA_LIBS ${EXTRA_LIBS} libpthread.so )

ADD_EXECUTABLE(main ${DIR_SRCS})
TARGET_LINK_LIBRARIES( main ${EXTRA_LIBS} )
